# Soldier

./: .env.example  .gitignore  .prettierrc.toml  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  shell.nix
.templates/: .index.json  simple_cmd.template.rs
crates/core/: .env.example  Cargo.toml  README.md  RESPONSES.md
crates/core/src/: lib.rs  main.rs
crates/core/src/commands/: mod.rs
crates/core/src/commands/config/: mod.rs  settings.rs  setup.rs  verify.rs
crates/core/src/commands/dev/: accounts.rs  eval.rs  mod.rs  test.rs
crates/core/src/commands/misc/: mod.rs  ping.rs
crates/core/src/commands/roblox/: mod.rs
crates/core/src/entity/: account.rs  clan.rs  clan_user.rs  event.rs  guild.rs  guild_user.rs  medal.rs  mod.rs  prelude.rs  role_level.rs  sea_orm_active_enums.rs  user.rs
crates/core/src/events/: mod.rs  ready.rs
crates/core/src/utils/: components.rs  embeds.rs  emojis.rs  error.rs  helper.rs  mod.rs
crates/migration/: .env.example  Cargo.toml
crates/migration/src/: lib.rs  m20250628_000001_create_table.rs  m20250628_000001_create_tables.rs
src/: main.rs
src/commands/dev/: mod.rs
src/commands/misc/: mod.rs  ping.rs
