[package]
name = "soldier-core"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
dotenv = "0.15.0"
oxid_roblox = "0.1.0"
poise = "0.6.1"
reqwest = "0.12.15"
serenity = { version = "0.12.4", features = ["utils"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
