[package]
name = "soldier-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
migration = { path = "../migration" }
dotenv = "0.15.0"
oxid_roblox = { git = "https://github.com/antipoly/oxid_roblox", branch = "main" }
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
thiserror = "2.0.12"
fake = "4.3.0"
reqwest = "0.12.15"
once_cell = "1.21.3"
sea-query = { version = "0.32.7", features = ["backend-postgres"] }
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "macros"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", features = ["utils", "collector"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
regex = "1"
anyhow = "1.0.98"
rhai = "1.22.2"
